force-app/main/default/objects/PlayEvent__e/PlayEvent__e.object-meta.xml
<CustomObject>
    <label>Play Event</label>
    <pluralLabel>Play Events</pluralLabel>
</CustomObject>