force-app/main/default/objects/PlayEvent__e/fields/IsAnonymous__c.field-meta.xml
<CustomField>
    <fullName>IsAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>