force-app/main/default/objects/PlayEvent__e/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <label>Sender Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>