force-app/main/default/objects/PlayEvent__e/fields/SendToIds__c.field-meta.xml
<CustomField>
    <fullName>SendToIds__c</fullName>
    <label>Send to Ids</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>