force-app/main/default/objects/PlayEvent__e/fields/SoundUrl__c.field-meta.xml
<CustomField>
    <fullName>SoundUrl__c</fullName>
    <label>Sound Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>